[package]
name = "lib6502"
description = "An experimental 6502 emulation library"
version = "0.3.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/drewwalton19216801/lib6502"
exclude = [".github/*", "*.idea/*"]
authors = ["Drew Walton"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]